bigger like section after post

--- a/_posts/2013-10-04-donegood.md
+++ b/_posts/2013-10-04-donegood.md
@@ -104,9 +104,10 @@ So the site lives in a sort of nearly-finished form, with just enough usability 
 
 ### Has anything happened since then?
 
-I attended a "[H(app)athon](http://happathon.com/)" and found myself facilitating a brainstorm on the subject of improving happiness. We all seemed to latch onto the idea of competitive altruism but here we framed it more as a process of *thanking* than bragging. [Arin Crumley](http://arincrumley.wordpress.com/) came up with the name "Thank Bank" and we pitched this concept to a room full of people and the consensus was that is was a great idea. 
+I attended a "[H(app)athon](http://happathon.com/)" and found myself facilitating a brainstorm on the subject of improving happiness. We all seemed to latch onto the idea of competitive altruism but here we framed it more as a process of *thanking* than bragging. [Arin Crumley](http://arincrumley.wordpress.com/) came up with the name "Thank Bank" and we pitched this concept to a room full of people and the consensus was that it was a great idea. 
 
 A few of us have stayed in touch and we had some ideas about pursuing this, although there are other similar projects emerging, such as [Impossible](http://impossible.com), something Jimmy Wales of Wikipedia fame has been involved in.
+
 
 
 ### Can it be revived?
